[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemyKB.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 0.215506

[node name="KinematicBody" type="KinematicBody"]
script = ExtResource( 2 )

[node name="character_bear" parent="." instance=ExtResource( 1 )]

[node name="Head" parent="character_bear/KayKit_AnimatedCharacter_v12/KayKit Animated Character/Skeleton" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.711598, 0 )

[node name="Body" parent="character_bear/KayKit_AnimatedCharacter_v12/KayKit Animated Character/Skeleton" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="ArmLeft" parent="character_bear/KayKit_AnimatedCharacter_v12/KayKit Animated Character/Skeleton" index="2"]
transform = Transform( -1.19209e-07, 0.471936, -0.881633, 2.5332e-07, -0.881633, -0.471936, -1, -2.5332e-07, -1.19209e-07, 0.14, 0.691598, -1.3027e-15 )

[node name="ArmRight" parent="character_bear/KayKit_AnimatedCharacter_v12/KayKit Animated Character/Skeleton" index="3"]
transform = Transform( -1.19209e-07, -0.471936, -0.881633, -2.23518e-07, -0.881633, 0.471936, -1, 2.23517e-07, -1.19209e-07, -0.14, 0.691598, 8.40813e-15 )

[node name="HandslotLeft" parent="character_bear/KayKit_AnimatedCharacter_v12/KayKit Animated Character/Skeleton" index="4"]
transform = Transform( -1, 2.92556e-08, 0, 0, 1.04171e-07, 1, -1.04757e-07, 1, -7.80337e-08, 0.4, 0.205887, -1.3956e-07 )

[node name="HandslotRight" parent="character_bear/KayKit_AnimatedCharacter_v12/KayKit Animated Character/Skeleton" index="5"]
transform = Transform( -1, 1.0808e-07, 0, 0, -1.76167e-07, 1, 3.87132e-10, 1, 2.23518e-07, -0.4, 0.205887, 1.2314e-07 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Hitbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.816736, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 3.68217, 0, 0, 0, 4.98637, 0, 0, 0, 3.65836, 0, 0.828695, 0 )

[node name="Hitbox2" type="CollisionShape" parent="Area"]
transform = Transform( 0.271579, 0, 0, 0, -8.76618e-09, 0.200547, 0, -0.273347, -1.19484e-08, 0, -0.00239836, 0 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]

[editable path="character_bear"]
[editable path="character_bear/KayKit_AnimatedCharacter_v12"]
